Command resources (system property "aletheia.gui.cli.commands") might now be specified as just a relative path from the current working directory.